header section completed

--- a/index.html
+++ b/index.html
@@ -8,6 +8,47 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    <h1 class=" bg-red-600">Naveen is the best engineer</h1>
+    <div class="overflow-x-hidden">
+        <header class="header h-screen">
+            <div class="max-w-[1200px] w-[90%] m-auto">
+                <!-- =================================================adding navbar=============================== -->
+                <nav class=" py-4 ">
+                    <h2 class="text-3xl">Logo</h2>
+                </nav>
+
+                <!-- ==============================main section=========================================== -->
+                <main>
+                    <div class="flexmain flex ">
+
+                        <div class="mainContent  w-[50%] p-5 flex flex-col justify-center">
+                            <h1 class="text-white font-semibold text-5xl leading-snug">We Are A Leading Private Label Cosmetics Manufacturer</h1>
+                            <p class="text-white text-2xl font-extralight">At Palmist, we’re not just another company that pushes the existing formulations. We recommend and handhold the customers by suggesting formulations that are new age and have the capacity to grow in today’s market.</p>
+                        </div>
+                        <div class="form w-[50%]">
+                            <form class="flex flex-col gap-7 items-center py-12 px-10 bg-white">
+                                <div class="w-full">
+                                    <p class="text-2xl mb-3 font-extralight">Send us a message. We’d love to hear from you.</p>
+                                    <h3 class="text-3xl">GET A FREE QUOTE</h3>
+                                </div>
+
+                                <input type="text" placeholder="Enter Your Name" class="w-full outline outline-[#96A0A9] outline-1 p-3 rounded-3xl">
+                                <select name="services" class="w-full outline outline-[#96A0A9] outline-1 p-3 rounded-3xl" aria-placeholder="select" >
+                                    <option value="Select Service" class="newtext text-[#96A0A9]" selected disabled >Select Service</option>
+                                    <option value="Contract Manufacturer" class="text-[#96A0A9]">Contract Manufacturer</option>
+                                    <option value="Private Label" class="text-[#96A0A9]">Private Label</option>
+                                    <option value="Cosmetics White Label Manufacturer" class="text-[#96A0A9]">Cosmetics White Label Manufacturer</option>
+                                    <option value="Travel Packs OEM" class="text-[#96A0A9]">Travel Packs OEM</option>
+                                    <option value="Research & Development for new concepts" class="text-[#96A0A9]">Research & Development for new concepts</option>
+                                </select>
+                                <input type="email" placeholder="Enter Your Email Address" name="email" id="email" class="w-full outline outline-[#96A0A9] outline-1 p-3 rounded-3xl">
+                                <input type="number" placeholder="Enter Your Phone Number" name="number" id="number" class="w-full outline outline-[#96A0A9] outline-1 p-3 rounded-3xl">
+                                <input type="submit" value="REQUEST CALLBACK" class="w-full outline outline-[#DF7373] outline-3 p-3 rounded-3xl text-[#DF7373]">
+                            </form>
+                        </div>
+                    </div>
+                </main>
+            </div>
+        </header>
+    </div>
 </body>
 </html>
