completed responsive header

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="overflow-x-hidden">
-        <header class="header h-screen">
+        <header class="header lg:h-[110vh]">
             <div class="max-w-[1200px] w-[90%] m-auto">
                 <!-- =================================================adding navbar=============================== -->
                 <nav class=" py-4 ">
@@ -18,14 +18,14 @@
 
                 <!-- ==============================main section=========================================== -->
                 <main>
-                    <div class="flexmain flex ">
+                    <div class="flexmain flex flex-col lg:flex-row">
 
-                        <div class="mainContent  w-[50%] p-5 flex flex-col justify-center">
+                        <div class="mainContent w-full  lg:w-[50%] py-5 md:py-5 flex flex-col justify-center">
                             <h1 class="text-white font-semibold text-5xl leading-snug">We Are A Leading Private Label Cosmetics Manufacturer</h1>
-                            <p class="text-white text-2xl font-extralight">At Palmist, we’re not just another company that pushes the existing formulations. We recommend and handhold the customers by suggesting formulations that are new age and have the capacity to grow in today’s market.</p>
+                            <p class="text-white text-[1.2rem] font-extralight">At Palmist, we’re not just another company that pushes the existing formulations. We recommend and handhold the customers by suggesting formulations that are new age and have the capacity to grow in today’s market.</p>
                         </div>
-                        <div class="form w-[50%]">
-                            <form class="flex flex-col gap-7 items-center py-12 px-10 bg-white">
+                        <div class="form w-full lg:w-[50%]">
+                            <form class="flex flex-col gap-7 items-center py-10 px-10 bg-white mb-6">
                                 <div class="w-full">
                                     <p class="text-2xl mb-3 font-extralight">Send us a message. We’d love to hear from you.</p>
                                     <h3 class="text-3xl">GET A FREE QUOTE</h3>
@@ -47,6 +47,8 @@
                         </div>
                     </div>
                 </main>
+
+
             </div>
         </header>
     </div>
