completed service section with responsive

--- a/index.html
+++ b/index.html
@@ -147,6 +147,42 @@
           </div>
         </div>
       </section>
+
+      <!-- =======================================service section Start============================================= -->
+      <section class="bg-[#f0f0f1] py-[5rem]">
+        <div class="max-w-[1200px] w-[90%] m-auto">
+            <div class="sreviceContents text-center flex items-center flex-col">
+                <p class="text-[#E07A7A] font-bold">WHAT WE DO</p>
+                <div class="border border-t-slate-300 w-[25%] my-3"></div>
+                <h2 class="font-bold text-5xl font-normal">Services</h2>
+                <p class="my-3 text-[#777E85]">Expertly Crafted Services to Propel Your Beauty Brand: Discover Our Comprehensive Private Label Solutions, Designed to Bring Your Vision to Life and Ensure Market Success</p>
+            </div>
+            <div class="serviceItems">
+                <div class="threeItems flex gap-10 flex-col md:flex-row justify-between">
+                    <div class="h-[300px] w-full md:w-[30%]">
+                        <img src="./assest/Label.jpg" alt="serviceImages" width="100%" class="object-cover object-center h-full">
+                    </div>
+                    <div class="h-[300px] w-full md:w-[30%]">
+                        <img src="./assest/White-Label-Manufacturer.jpg" alt="serviceImages" width="100%" class="object-cover object-center h-full">
+                    </div>
+                    <div class="h-[300px] w-full md:w-[30%]">
+                        <img src="./assest/Cosmetic-Manufacturer.jpg" alt="serviceImages" width="100%" class="object-cover object-center h-full">
+                    </div>
+                </div>
+
+                <div class="twoItems flex gap-[80px] flex-col md:flex-row justify-center mt-10">
+                    <div class="h-[300px] md:w-[30%]">
+                        <img src="./assest/Contract-Manufacturer.jpg" alt="serviceImages" width="100%" class="object-cover object-center h-full">
+                    </div>
+                <div class="h-[300px] md:w-[30%]">
+                    <img src="./assest/Travel-Pack.jpg" alt="serviceImages" width="100%" class="object-cover object-center h-full">
+                </div>
+            </div>
+        </div>
+        </div>
+      </section>
+
+
     </div>
   </body>
 </html>
