--- a/index.html
+++ b/index.html
@@ -159,23 +159,39 @@
             </div>
             <div class="serviceItems">
                 <div class="threeItems flex gap-10 flex-col md:flex-row justify-between">
-                    <div class="h-[300px] w-full md:w-[30%]">
+                    <div class="h-[300px] w-full md:w-[30%] relative">
                         <img src="./assest/Label.jpg" alt="serviceImages" width="100%" class="object-cover object-center h-full">
+                        <div class="absolute top-0 p-[3rem] flex items-end w-full bg-[#03030370] z-10 h-full">
+                          <p class="text-white text-3xl w-[50%]">Private labelling</p>
+                        </div>
                     </div>
-                    <div class="h-[300px] w-full md:w-[30%]">
+                    <div class="h-[300px] w-full md:w-[30%] relative">
                         <img src="./assest/White-Label-Manufacturer.jpg" alt="serviceImages" width="100%" class="object-cover object-center h-full">
+                        <div class="absolute top-0 p-[3rem] flex items-end w-full bg-[#03030370] z-10 h-full">
+                          <p class="text-white text-3xl w-[50%]">White Label Manufacturer</p>
+                        </div>
                     </div>
-                    <div class="h-[300px] w-full md:w-[30%]">
+
+                    <div class="h-[300px] w-full md:w-[30%] relative">
                         <img src="./assest/Cosmetic-Manufacturer.jpg" alt="serviceImages" width="100%" class="object-cover object-center h-full">
+                        <div class="absolute top-0 p-[3rem] flex items-end w-full bg-[#03030370] z-10 h-full">
+                          <p class="text-white text-3xl w-[50%]">Custom Formulatoin</p>
+                        </div>
                     </div>
                 </div>
 
                 <div class="twoItems flex gap-[80px] flex-col md:flex-row justify-center mt-10">
-                    <div class="h-[300px] md:w-[30%]">
+                    <div class="h-[300px] md:w-[30%] relative">
                         <img src="./assest/Contract-Manufacturer.jpg" alt="serviceImages" width="100%" class="object-cover object-center h-full">
+                        <div class="absolute top-0 p-[3rem] flex items-end w-full bg-[#03030370] z-10 h-full">
+                          <p class="text-white text-3xl w-[50%]">Contract Manufacturing</p>
+                        </div>
                     </div>
-                <div class="h-[300px] md:w-[30%]">
+                <div class="h-[300px] md:w-[30%] relative" >
                     <img src="./assest/Travel-Pack.jpg" alt="serviceImages" width="100%" class="object-cover object-center h-full">
+                    <div class="absolute top-0 p-[3rem] flex items-end w-full bg-[#03030370] z-10 h-full">
+                      <p class="text-white text-3xl w-[50%]">R&D For New Concepts</p>
+                    </div>
                 </div>
             </div>
         </div>
