--- a/index.html
+++ b/index.html
@@ -159,20 +159,20 @@
             </div>
             <div class="serviceItems">
                 <div class="threeItems flex gap-10 flex-col md:flex-row justify-between">
-                    <div class="h-[300px] w-full md:w-[30%] relative">
+                    <div class="h-[300px] w-full md:w-[30%] relative hover:scale-105 transition-all">
                         <img src="./assest/Label.jpg" alt="serviceImages" width="100%" class="object-cover object-center h-full">
                         <div class="absolute top-0 p-[3rem] flex items-end w-full bg-[#03030370] z-10 h-full">
                           <p class="text-white text-3xl w-[50%]">Private labelling</p>
                         </div>
                     </div>
-                    <div class="h-[300px] w-full md:w-[30%] relative">
+                    <div class="h-[300px] w-full md:w-[30%] relative hover:scale-105 transition-all">
                         <img src="./assest/White-Label-Manufacturer.jpg" alt="serviceImages" width="100%" class="object-cover object-center h-full">
                         <div class="absolute top-0 p-[3rem] flex items-end w-full bg-[#03030370] z-10 h-full">
                           <p class="text-white text-3xl w-[50%]">White Label Manufacturer</p>
                         </div>
                     </div>
 
-                    <div class="h-[300px] w-full md:w-[30%] relative">
+                    <div class="h-[300px] w-full md:w-[30%] relative hover:scale-105 transition-all">
                         <img src="./assest/Cosmetic-Manufacturer.jpg" alt="serviceImages" width="100%" class="object-cover object-center h-full">
                         <div class="absolute top-0 p-[3rem] flex items-end w-full bg-[#03030370] z-10 h-full">
                           <p class="text-white text-3xl w-[50%]">Custom Formulatoin</p>
@@ -181,13 +181,13 @@
                 </div>
 
                 <div class="twoItems flex gap-[80px] flex-col md:flex-row justify-center mt-10">
-                    <div class="h-[300px] md:w-[30%] relative">
+                    <div class="h-[300px] md:w-[30%] relative hover:scale-105 transition-all">
                         <img src="./assest/Contract-Manufacturer.jpg" alt="serviceImages" width="100%" class="object-cover object-center h-full">
                         <div class="absolute top-0 p-[3rem] flex items-end w-full bg-[#03030370] z-10 h-full">
                           <p class="text-white text-3xl w-[50%]">Contract Manufacturing</p>
                         </div>
                     </div>
-                <div class="h-[300px] md:w-[30%] relative" >
+                <div class="h-[300px] md:w-[30%] relative hover:scale-105 transition-all" >
                     <img src="./assest/Travel-Pack.jpg" alt="serviceImages" width="100%" class="object-cover object-center h-full">
                     <div class="absolute top-0 p-[3rem] flex items-end w-full bg-[#03030370] z-10 h-full">
                       <p class="text-white text-3xl w-[50%]">R&D For New Concepts</p>
@@ -197,6 +197,73 @@
         </div>
         </div>
       </section>
+
+      <!-- =================================================Product Categories=========================================== -->
+
+      <section class="py-[5rem]">
+        <div class="max-w-[1200px] w-[90%] m-auto">
+          <div class="productContent flex items-center flex-col">
+            <p class="text-[#E07A7A]">EXPLORE OUR DIVERSE PRODUCT PORTFOLIO</p>
+            <div class="border border-t-slate-400 border-1 w-[20%] mt-2 mb-5"></div>
+            <h2 class="text-5xl font-normal mb-5">Product Categories</h2>
+            <p class="text-[#456576] text-center">Unleash Your Brand’s Potential with a Wide Range of Customizable, High-Quality Private Label Cosmetics to Delight and Inspire Your Customers.</p>
+          </div>
+
+          <div class="pruductItems mt-10">
+
+            <div class="flex text-white gap-6 justify-between flex-col md:flex-row">
+              <div class="bg-[#6C3A5C] text-center md:w-[40%] flex flex-col items-center p-[4rem]">
+                <img src="./assest/icons/Untitled-2_05-150x150.png" alt="ProductIcon">
+                <p class="text-2xl">SKIN CARE</p>
+                <p class="mt-1">Sunscreen</p>
+                <p class="mt-1">Body Lotion</p>
+                <p class="mt-1">Moisturizers</p>
+              </div>
+              <div class="bg-[#6C3A5C] text-center md:w-[40%] flex flex-col items-center p-[4rem]">
+                <img src="./assest/icons/Untitled-2_01-150x150.png" alt="ProductIcon">
+                <p class="text-2xl">HAIR CARE</p>
+                <p class="mt-1">Shampoos</p>
+                <p class="mt-1">Hair Serum</p>
+                <p class="mt-1">conditioners</p>
+              </div>
+              <div class="bg-[#6C3A5C] text-center md:w-[40%] flex flex-col items-center p-[4rem]">
+                <img src="./assest/icons/Untitled-2_03-150x150.png" alt="ProductIcon">
+                <p class="text-2xl">BODY CARE</p>
+                <p class="mt-1">Body Oils</p>
+                <p class="mt-1">Body Wash</p>
+                <p class="mt-1">Shower Gels</p>
+              </div>
+            </div>
+
+            <div class="flex text-white gap-6 justify-between flex-col md:flex-row mt-5">
+              <div class="bg-[#6C3A5C] text-center md:w-[40%] flex flex-col items-center p-[4rem]">
+                <img src="./assest/icons/Untitled-2_06-150x150.png" alt="ProductIcon">
+                <p class="text-2xl">MEN'S GROOMING</p>
+                <p class="mt-1">Face Wash</p>
+                <p class="mt-1">Hair Styling</p>
+                <p class="mt-1">Beard Brooming</p>
+              </div>
+              <div class="bg-[#6C3A5C] text-center md:w-[40%] flex flex-col items-center p-[4rem]">
+                <img src="./assest/icons/Untitled-2_02-150x150.png" alt="ProductIcon">
+                <p class="text-2xl">BABY CARE</p>
+                <p class="mt-1">Babay Soaps</p>
+                <p class="mt-1">Body Lotion</p>
+                <p class="mt-1">Baby Shampoos</p>
+              </div>
+              <div class="bg-[#6C3A5C] text-center md:w-[40%] flex flex-col items-center p-[4rem]">
+                <img src="./assest/icons/Untitled-3_01-150x150.png" alt="ProductIcon">
+                <p class="text-2xl">AYURVEDIC</p>
+                <p class="mt-1">Shampoo</p>
+                <p class="mt-1">Face Wash</p>
+                <p class="mt-1">Oil & Cream</p>
+              </div>
+            </div>
+
+          </div>
+
+        </div>
+      </section>
+
 
 
     </div>
