Choose Us secssion completed with responsivness

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             <div class="advantageContent w-full md:w-[50%] py-5 pr-5">
               <p class="text-[#E07A7A]">COMPELLING REASONS TO CHOOSE US</p>
               <div class="border border-t-slate-300 w-[25%] mt-2"></div>
-              <h2 class="font-bold text-5xl font-normal my-5">Competitive Advantage</h2>
+              <h2 class=" text-5xl font-normal my-5">Competitive Advantage</h2>
               <p class="leading-[1.5rem] mb-5">
                 Experience Unmatched Quality and Customization: Your
                 One-Stop-Shop for Innovative, Cruelty-Free, and Expertly
@@ -154,7 +154,7 @@
             <div class="sreviceContents text-center flex items-center flex-col">
                 <p class="text-[#E07A7A] font-bold">WHAT WE DO</p>
                 <div class="border border-t-slate-300 w-[25%] my-3"></div>
-                <h2 class="font-bold text-5xl font-normal">Services</h2>
+                <h2 class="text-5xl font-normal">Services</h2>
                 <p class="my-3 text-[#777E85]">Expertly Crafted Services to Propel Your Beauty Brand: Discover Our Comprehensive Private Label Solutions, Designed to Bring Your Vision to Life and Ensure Market Success</p>
             </div>
             <div class="serviceItems">
@@ -258,9 +258,39 @@
                 <p class="mt-1">Oil & Cream</p>
               </div>
             </div>
-
           </div>
+        </div>
+      </section>
 
+      <!-- ============================================= Why Choose Us session=========================================== -->
+      <section class="ChooseUs ">
+        <div class="svg py-[4rem]">
+          <div class="max-w-[1200px] w-[90%] m-auto">
+
+            <div class="content w-[60%]">
+              <p class="text-red-500 space-x-5">UNRIVALED EXPERTISE AND COMMITMENT TO YOUR BRAND’S SUCCESS</p>
+              <div class="border border-t-slate-300 w-[25%] mt-1 mb-3"></div>
+              <h2 class="my-3 text-5xl">Why Choose Us?</h2>
+              <p>At Palmist Healthcare, we understand the importance of creating a beauty brand that captivates your target audience and stands out in the competitive cosmetics market. Here’s why partnering with us will give your brand the competitive edge it deserves:</p>
+            </div>
+
+            <div class="flex justify-between flex-col md:flex-row mt-5">
+              <div class="bg-[#ffff] hover:-translate-x-2.5 transition-all duration-500 text-center md:w-[45%] flex flex-col items-center p-[4rem]">
+                <p class="text-2xl text-[#6C3A5C] my-5">Bespoke Formulations</p>
+                <p class="mt-1">Our tema of experience chemists and product developer work closely with you to create custom, Innovative, and high-performance cosmetics tailored to your brand's unique vision </p>
+              </div>
+              <div class="bg-[#fff] scale-105 z-10 shadow-2xl hover:scale-110 transition-all duration-500 text-center md:w-[45%] flex flex-col items-center p-[4rem]">
+                <p class="text-2xl text-[#6C3A5C] my-5">End-to-End Services</p>
+                <p class="mt-1">We simplify the private label process with our comprehensive suite of services, including research and development, formulaion, packagin desing, producion, and branding - all under one roof.</p>
+
+              </div>
+              <div class="bg-[#fff] hover:-translate-x-[-10px] transition-all duration-500 text-center md:w-[45%] flex flex-col items-center p-[4rem]">
+                <p class="text-2xl text-[#6C3A5C] my-5">Quality Assurance</p>
+                <p class="mt-1">We adhere to the highest industy standards and regulations, ensuing that your products are consistently safe, effective, and of the highest quality.</p>
+
+              </div>
+            </div>
+          </div>
         </div>
       </section>
 
