completed result section with responsiveness

--- a/index.html
+++ b/index.html
@@ -294,7 +294,31 @@
         </div>
       </section>
 
+      <!-- =======================================Result for our customers section============================= -->
 
+      <section class="py-[5rem]">
+        <div class="max-w-[1200px] w-[90%] m-auto">
+          <div class="productContent flex items-center flex-col">
+            <p class="text-[#E07A7A]">EXPLORE OUR DIVERSE PRODUCT PORTFOLIO</p>
+            <div class="border border-t-slate-400 border-1 w-[20%] mt-2 mb-5"></div>
+            <h2 class="text-5xl font-normal mb-5 text-center">We Produce Results For Our Customers</h2>
+          </div>
+          <div class="text-center counter flex justify-between flex-col md:flex-row mt-5">
+            <div class="my-5">
+              <h2 class="text-4xl"> 60+ </h2>
+              <p class="text-slate-500">Countreis Served</p>
+            </div>
+            <div class="my-5">
+              <h2 class="text-4xl"> 50 Metric Tons </h2>
+              <p class="text-slate-500">Production Capacity</p>
+            </div>
+            <div class="my-5">
+              <h2 class="text-4xl"> 60 Sq ft </h2>
+              <p class="text-slate-500">Manufacturing Area</p>
+            </div>
+          </div>
+
+      </section>
 
     </div>
   </body>
