product us Section completed with responsiveness

--- a/index.html
+++ b/index.html
@@ -320,6 +320,68 @@
 
       </section>
 
+      <!-- =================================ProductWithUs Section====================================== -->
+
+      <section class="bg-[#F0F0F1] py-[5rem]">
+        <div class="max-w-[1200px] w-[90%] m-auto">
+
+          
+          <div class="flex items-center flex-col">
+            <p class="text-[#E07A7A] text-center">CUSTOMIZE YOUR OWN PRODUCTS TODAY!</p>
+            <div class="border border-t-slate-400 border-1 w-[20%] mt-2 mb-5"></div>
+            <h2 class="text-5xl font-normal mb-5 text-center">Create Your Own Product With Us</h2>
+            <p>Products that are made by you, for you! </p>
+          </div>
+          
+          <div class=" justify-between mt-10 relative flex-col lg:flex-row sm:hidden lg:flex">
+
+            <div class="w-[0%] lg:w-[100%] left-[20%] lg:left-0 h-[100%] absolute m-auto lg:-top-[18%] top-0 flex ">
+            <div class="border-l lg:border-t lg:border-t-[#F15D60] border-l-[#f15D60] lg:w-[80%] h-[70%] lg:h-0 m-auto "></div>
+            </div>
+
+            <div class="flex md:flex-col p-[2rem] gap-8 z-10">
+              <div class="flex justify-center z-10">
+                <img src="./assest/productUsImages/Untitled-3_01-1-150x150.png" alt="productIcons">
+              </div>
+              <div>
+                <h2 class="text-2xl md:text-center mb-5">Step-1</h2>
+                <p class="md:text-center">Choose a product and develop the formulation.</p>
+              </div>
+            </div>
+
+              <div class="flex md:flex-col p-[2rem] gap-8 z-10 ">
+              <div class="flex justify-center z-10 w-[50%] lg:w-[100%]">
+                <img src="./assest/productUsImages/Untitled-3_02-1-150x150.png" alt="productIcons">
+              </div>
+              <div>
+                <h2 class="text-2xl md:text-center mb-5">Step-2</h2>
+                <p class="md:text-center">Produce the product using natural extracts, oils, and active ingredients.</p>
+              </div>
+            </div>
+
+              <div class="flex md:flex-col p-[2rem] gap-8 z-10">
+              <div class="flex justify-center w-[40%] z-10 lg:w-[100%]">
+                <img src="./assest/productUsImages/Untitled-3_03-1-150x150.png" alt="productIcons">
+              </div>
+              <div>
+                <h2 class="text-2xl md:text-center mb-5">Step-3</h2>
+                <p class="md:text-center">Safely package the goods, and make sure they look good.</p>
+              </div>
+            </div>
+
+              <div class="flex md:flex-col p-[2rem] gap-8 z-10">
+              <div class="flex justify-center w-[40%] z-10 lg:w-[100%]">
+                <img src="./assest/productUsImages/Untitled-3_04-1-150x150.png" alt="productIcons">
+              </div>
+              <div>
+                <h2 class="text-2xl md:text-center mb-5">Step-4</h2>
+                <p class="md:text-center">Verify the safety and quality requirements are being met.</p>
+              </div>
+            </div>
+
+        </div>
+      </section>
+
     </div>
   </body>
 </html>
