--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="main.css" />
     <script src="./js/index.js" defer></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   </head>
   <body>
     <div class="overflow-x-hidden">
@@ -458,8 +459,134 @@
         </div>
       </section>
 
+      <!-- ============================================Frequently Asked Questions===================================== -->
+
+      <section class="py-[5rem]">
+        <div class="max-w-[1200px] w-[90%] m-auto">
+          <div class="flex flex-col md:flex-row">
+            <div class="md:w-[50%]">
+              <h2 class="text-5xl my-10">Frequently Asked Questions</h2>
+
+              <div class="slider my-8">
+                <div id="flip" class="p-[0.5rem] flex justify-between font-bold">What Kind of cosmetic products do you manufacturer? <span id="arrow"> <i class="fa-solid fa-angle-down"></i> </span> </div>
+                <div id="panel" class="p-[0.5rem] hidden">We specialize in third-party contract manufacturing of skincare, haircare, and personal care products. We offer custom formulations and private labeling services for your brand.</div>
+              </div>
+
+              <div class="slider my-8">
+                <div id="flipTwo" class="p-[0.5rem] flex justify-between font-bold">What Kind of formulations do you use for your products? <span id="arrowOne"> <i class="fa-solid fa-angle-down"></i> </span></div>
+                <div id="panelOne" class="hidden p-[0.5rem]">We use high-quality herbal and natural ingredients in our formulations to ensure that our products are safe, effective, and eco-friendly.</div>
+              </div>
+
+              <div class="slider my-8">
+                <div id="flipThree" class="p-[0.5rem] flex justify-between font-bold">How experience is your team? <span id="arrowTwo"> <i class="fa-solid fa-angle-down"></i> </span></div>
+                <div id="panelTwo" class="hidden p-[0.5rem]">Our team of professionals has years of experience in the cosmetic industry. They are skilled, trained, and dedicated to providing high-quality products and services to our clients.</div>
+              </div>
+
+              <div class="slider my-8">
+                <div id="flipFour" class="p-[0.5rem] flex justify-between font-bold">What is the minimum order quantity (MOQ) for your products? <span id="arrowThree"> <i class="fa-solid fa-angle-down"></i> </span></div>
+                <div id="panelThree" class="hidden p-[0.5rem]">Our MOQ for custom formulations and private labeling is 1000 units per product.</div>
+              </div>
+
+              <div class="slider my-8">
+                <div id="flipFive" class="p-[0.5rem] flex justify-between font-bold">What is private lebeling? <span id="arrowFour"> <i class="fa-solid fa-angle-down"></i> </span></div>
+                <div id="panelFour" class="hidden p-[0.5rem]">Private labeling is the process of branding products that are manufactured by a third party. We can manufacture products for your brand and apply your own branding and labeling to the packaging</div>
+              </div>
+
+            </div>
+
+            <div class="md:w-[50%] ">
+              <div class="form w-full lg:w-[100%]">
+                <form action="https://formspree.io/f/xqkvkyqq"
+                  method="post"
+                  class="flex flex-col gap-7 items-center py-10 px-10 bg-white mb-6"
+                >
+                  <div class="w-full">
+                    <p class="text-2xl mb-3 font-extralight">
+                      Send us a message. We’d love to hear from you.
+                    </p>
+                    <h3 class="text-3xl">GET A FREE QUOTE</h3>
+                  </div>
+
+                  <input
+                    type="text"
+                    placeholder="Enter Your Name"
+                    class="w-full outline outline-[#96A0A9] outline-1 p-3 rounded-3xl"
+                    name="userName"
+                    id="name" required
+                  />
+                  <select
+                    name="services"
+                    class="w-full outline outline-[#96A0A9] outline-1 p-3 rounded-3xl"
+                    aria-placeholder="select"
+                    id="service" required
+                  >
+                    <option
+                      value="Select Service"
+                      class="newtext text-[#96A0A9]"
+                      selected
+                      disabled
+                    >
+                      Select Service
+                    </option>
+                    <option
+                      value="Contract Manufacturer"
+                      class="text-[#96A0A9]"
+                    >
+                      Contract Manufacturer
+                    </option>
+                    <option value="Private Label" class="text-[#96A0A9]">
+                      Private Label
+                    </option>
+                    <option
+                      value="Cosmetics White Label Manufacturer"
+                      class="text-[#96A0A9]"
+                    >
+                      Cosmetics White Label Manufacturer
+                    </option>
+                    <option value="Travel Packs OEM" class="text-[#96A0A9]">
+                      Travel Packs OEM
+                    </option>
+                    <option
+                      value="Research & Development for new concepts"
+                      class="text-[#96A0A9]"
+                    >
+                      Research & Development for new concepts
+                    </option>
+                  </select>
+                  <input
+                    type="email"
+                    placeholder="Enter Your Email Address"
+                    name="email"
+                    id="email"
+                    class="w-full outline outline-[#96A0A9] outline-1 p-3 rounded-3xl"
+                    required
+                  />
+                  <input
+                    type="number"
+                    placeholder="Enter Your Phone Number"
+                    name="number"
+                    id="number"
+                    class="w-full outline outline-[#96A0A9] outline-1 p-3 rounded-3xl"
+                    required
+                  />
+                  <input
+                    type="submit"
+                    value="REQUEST CALLBACK"
+                    class="w-full outline outline-[#DF7373] outline-3 p-3 rounded-3xl text-[#DF7373] cursor-pointer"
+                    id="subBtn"
+                    name="submit"
+                    onclick="sendMail()"
+                  />
+                </form>
+              </div>
+            </div>
+        </div>
+        </div>
+      </section>
+
       
 
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js" integrity="sha512-3gJwYpMe3QewGELv8k/BX9vcqhryRdzRMxVfq6ngyWXwo03GFEzjsUm8Q7RZcHPHksttq7/GFoxjCVUjkjvPdw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   </body>
 </html>
