--- a/index.html
+++ b/index.html
@@ -467,27 +467,27 @@
             <div class="md:w-[50%]">
               <h2 class="text-5xl my-10">Frequently Asked Questions</h2>
 
-              <div class="slider my-8">
+              <div class="slider my-8 cursor-pointer">
                 <div id="flip" class="p-[0.5rem] flex justify-between font-bold">What Kind of cosmetic products do you manufacturer? <span id="arrow"> <i class="fa-solid fa-angle-down"></i> </span> </div>
                 <div id="panel" class="p-[0.5rem] hidden">We specialize in third-party contract manufacturing of skincare, haircare, and personal care products. We offer custom formulations and private labeling services for your brand.</div>
               </div>
 
-              <div class="slider my-8">
+              <div class="slider my-8 cursor-pointer">
                 <div id="flipTwo" class="p-[0.5rem] flex justify-between font-bold">What Kind of formulations do you use for your products? <span id="arrowOne"> <i class="fa-solid fa-angle-down"></i> </span></div>
                 <div id="panelOne" class="hidden p-[0.5rem]">We use high-quality herbal and natural ingredients in our formulations to ensure that our products are safe, effective, and eco-friendly.</div>
               </div>
 
-              <div class="slider my-8">
+              <div class="slider my-8 cursor-pointer">
                 <div id="flipThree" class="p-[0.5rem] flex justify-between font-bold">How experience is your team? <span id="arrowTwo"> <i class="fa-solid fa-angle-down"></i> </span></div>
                 <div id="panelTwo" class="hidden p-[0.5rem]">Our team of professionals has years of experience in the cosmetic industry. They are skilled, trained, and dedicated to providing high-quality products and services to our clients.</div>
               </div>
 
-              <div class="slider my-8">
+              <div class="slider my-8 cursor-pointer">
                 <div id="flipFour" class="p-[0.5rem] flex justify-between font-bold">What is the minimum order quantity (MOQ) for your products? <span id="arrowThree"> <i class="fa-solid fa-angle-down"></i> </span></div>
                 <div id="panelThree" class="hidden p-[0.5rem]">Our MOQ for custom formulations and private labeling is 1000 units per product.</div>
               </div>
 
-              <div class="slider my-8">
+              <div class="slider my-8 cursor-pointer">
                 <div id="flipFive" class="p-[0.5rem] flex justify-between font-bold">What is private lebeling? <span id="arrowFour"> <i class="fa-solid fa-angle-down"></i> </span></div>
                 <div id="panelFour" class="hidden p-[0.5rem]">Private labeling is the process of branding products that are manufactured by a third party. We can manufacture products for your brand and apply your own branding and labeling to the packaging</div>
               </div>
@@ -583,6 +583,23 @@
         </div>
         </div>
       </section>
+
+      <!-- =========================================contact us section===================================== -->
+
+      <section class="py-[5rem]">
+        <div class="max-w-[1200px] w-[90%] m-auto">    
+        <div class="flex flex-col md:flex-row justify-between gap-5 items-center">
+          <h2 class="text-3xl text-center">Need Help? Get in touch with us</h2>
+          <a href="tel:1234567980" class="outline outline-[#DF7373] outline-3 px-10 p-3 rounded-3xl text-[#DF7373] cursor-pointer"><i class="fa-solid fa-phone"></i> 1234567890</a>
+        </div>
+      </div>
+      </section>
+
+      <!-- ==================================footer===================================== -->
+
+      <footer class="py-5" style="border-top: 1px solid black;">
+        <p class="text-center">&copy; 2023 Palmist Healthcare Pvt Ltd. All Rights Reserved</p>
+      </footer>
 
       
 
