--- a/index.html
+++ b/index.html
@@ -471,31 +471,36 @@
 
               <div class="slider my-8 cursor-pointer">
                 <div id="flip" class="p-[0.5rem] flex justify-between font-bold">What Kind of cosmetic products do you manufacturer? <span id="arrow"> <i class="fa-solid fa-angle-down"></i> </span> </div>
-                <div id="panel" class="p-[0.5rem] hidden">We specialize in third-party contract manufacturing of skincare, haircare, and personal care products. We offer custom formulations and private labeling services for your brand.</div>
+
+                <div id="panel" class=" panel p-[0.5rem] hidden">We specialize in third-party contract manufacturing of skincare, haircare, and personal care products. We offer custom formulations and private labeling services for your brand.</div>
               </div>
 
               <div class="slider my-8 cursor-pointer">
                 <div id="flipTwo" class="p-[0.5rem] flex justify-between font-bold">What Kind of formulations do you use for your products? <span id="arrowOne"> <i class="fa-solid fa-angle-down"></i> </span></div>
-                <div id="panelOne" class="hidden p-[0.5rem]">We use high-quality herbal and natural ingredients in our formulations to ensure that our products are safe, effective, and eco-friendly.</div>
+
+                <div id="panelOne" class="panel hidden p-[0.5rem]">We use high-quality herbal and natural ingredients in our formulations to ensure that our products are safe, effective, and eco-friendly.</div>
               </div>
 
               <div class="slider my-8 cursor-pointer">
                 <div id="flipThree" class="p-[0.5rem] flex justify-between font-bold">How experience is your team? <span id="arrowTwo"> <i class="fa-solid fa-angle-down"></i> </span></div>
-                <div id="panelTwo" class="hidden p-[0.5rem]">Our team of professionals has years of experience in the cosmetic industry. They are skilled, trained, and dedicated to providing high-quality products and services to our clients.</div>
+
+                <div id="panelTwo" class="panel hidden p-[0.5rem]">Our team of professionals has years of experience in the cosmetic industry. They are skilled, trained, and dedicated to providing high-quality products and services to our clients.</div>
               </div>
 
               <div class="slider my-8 cursor-pointer">
                 <div id="flipFour" class="p-[0.5rem] flex justify-between font-bold">What is the minimum order quantity (MOQ) for your products? <span id="arrowThree"> <i class="fa-solid fa-angle-down"></i> </span></div>
-                <div id="panelThree" class="hidden p-[0.5rem]">Our MOQ for custom formulations and private labeling is 1000 units per product.</div>
+
+                <div id="panelThree" class="panel hidden p-[0.5rem]">Our MOQ for custom formulations and private labeling is 1000 units per product.</div>
               </div>
 
               <div class="slider my-8 cursor-pointer">
                 <div id="flipFive" class="p-[0.5rem] flex justify-between font-bold">What is private lebeling? <span id="arrowFour"> <i class="fa-solid fa-angle-down"></i> </span></div>
-                <div id="panelFour" class="hidden p-[0.5rem]">Private labeling is the process of branding products that are manufactured by a third party. We can manufacture products for your brand and apply your own branding and labeling to the packaging</div>
+
+                <div id="panelFour" class="panel hidden p-[0.5rem]">Private labeling is the process of branding products that are manufactured by a third party. We can manufacture products for your brand and apply your own branding and labeling to the packaging</div>
               </div>
 
             </div>
-
+                <!-- =========form========= -->
             <div class="md:w-[50%] ">
               <div class="form w-full lg:w-[100%]">
                 <form action="https://formspree.io/f/xqkvkyqq"
@@ -603,9 +608,7 @@
         <p class="text-center">&copy; 2023 Palmist Healthcare Pvt Ltd. All Rights Reserved</p>
       </footer>
 
-      
-
     </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js" integrity="sha512-3gJwYpMe3QewGELv8k/BX9vcqhryRdzRMxVfq6ngyWXwo03GFEzjsUm8Q7RZcHPHksttq7/GFoxjCVUjkjvPdw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
   </body>
 </html>
